# bzlmodRio-allwpilib

./: MODULE.bazel  WORKSPACE  maven_cpp_deps.bzl  maven_java_deps.bzl
.github/workflows/: auto_update.yml  build.yml  lint.yml  publish.yml
generate/: BUILD.bazel  MODULE.bazel  WORKSPACE  auto_update.py  generate.py  get_allwpilib_dependencies.py  get_version.py  publish.py
libraries/cpp/apriltag/: BUILD.bazel
libraries/cpp/cameraserver/: BUILD.bazel
libraries/cpp/cscore/: BUILD.bazel
libraries/cpp/datalog/: BUILD.bazel
libraries/cpp/hal/: BUILD.bazel
libraries/cpp/halsim_ds_socket/: BUILD.bazel
libraries/cpp/halsim_gui/: BUILD.bazel
libraries/cpp/halsim_ws_client/: BUILD.bazel
libraries/cpp/halsim_ws_server/: BUILD.bazel
libraries/cpp/ntcore/: BUILD.bazel
libraries/cpp/romiVendordep/: BUILD.bazel
libraries/cpp/wpilibNewCommands/: BUILD.bazel
libraries/cpp/wpilibOldCommands/: BUILD.bazel
libraries/cpp/wpilibc/: BUILD.bazel
libraries/cpp/wpimath/: BUILD.bazel
libraries/cpp/wpinet/: BUILD.bazel
libraries/cpp/wpiutil/: BUILD.bazel
libraries/cpp/xrpVendordep/: BUILD.bazel
libraries/java/annotations/: BUILD.bazel
libraries/java/apriltag/: BUILD.bazel
libraries/java/cameraserver/: BUILD.bazel
libraries/java/cscore/: BUILD.bazel
libraries/java/epilogue-processor/: BUILD.bazel
libraries/java/epilogue-runtime/: BUILD.bazel
libraries/java/fieldImages/: BUILD.bazel
libraries/java/hal/: BUILD.bazel
libraries/java/ntcore/: BUILD.bazel
libraries/java/shuffleboard-api/: BUILD.bazel
libraries/java/wpilibNewCommands/: BUILD.bazel
libraries/java/wpilibOldCommands/: BUILD.bazel
libraries/java/wpilibj/: BUILD.bazel
libraries/java/wpimath/: BUILD.bazel
libraries/java/wpinet/: BUILD.bazel
libraries/java/wpiunits/: BUILD.bazel
libraries/java/wpiutil/: BUILD.bazel
libraries/tools/: executable_launcher.sh  tool_launchers.bzl
libraries/tools/PathWeaver/: BUILD
libraries/tools/RobotBuilder/: BUILD
libraries/tools/Shuffleboard/: BUILD
libraries/tools/SmartDashboard/: BUILD
libraries/tools/SysId/: BUILD
libraries/tools/datalogtool/: BUILD
libraries/tools/glass/: BUILD
libraries/tools/outlineviewer/: BUILD
libraries/tools/roborioteamnumbersetter/: BUILD
libraries/tools/shuffleboard/: BUILD
libraries/tools/sysid/: BUILD
private/cpp/apriltag/: BUILD.bazel  static.BUILD.bazel
private/cpp/cameraserver/: BUILD.bazel  shared.BUILD.bazel  static.BUILD.bazel
private/cpp/cscore/: BUILD.bazel  static.BUILD.bazel
private/cpp/datalog/: BUILD.bazel  shared.BUILD.bazel  static.BUILD.bazel
private/cpp/hal/: BUILD.bazel  static.BUILD.bazel
private/cpp/halsim_ds_socket/: BUILD.bazel
private/cpp/halsim_gui/: BUILD.bazel  static.BUILD.bazel
private/cpp/halsim_ws_client/: BUILD.bazel  static.BUILD.bazel
private/cpp/halsim_ws_server/: BUILD.bazel  static.BUILD.bazel
private/cpp/ntcore/: BUILD.bazel  static.BUILD.bazel
private/cpp/romiVendordep/: BUILD.bazel  shared.BUILD.bazel  static.BUILD.bazel
private/cpp/wpilibNewCommands/: BUILD.bazel  static.BUILD.bazel
private/cpp/wpilibOldCommands/: BUILD.bazel
private/cpp/wpilibc/: BUILD.bazel  static.BUILD.bazel
private/cpp/wpimath/: BUILD.bazel  (+2 more)
private/non_bzlmod_dependencies/: download_dependencies.bzl  setup_dependencies.bzl
tests/: .bazelignore  .bazelrc  .bazelrc-buildbuddy  BUILD.bazel  MODULE.bazel  WORKSPACE
tests/cpp/apriltag/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/cameraserver/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/cscore/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/datalog/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/hal/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/halsim_ds_socket/: BUILD.bazel
tests/cpp/halsim_gui/: BUILD.bazel
tests/cpp/halsim_ws_client/: BUILD.bazel  main.cpp
tests/cpp/halsim_ws_server/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/ntcore/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/romiVendordep/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/wpilibNewCommands/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/wpilibOldCommands/: BUILD.bazel  main.cpp
tests/cpp/wpilibc/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/wpimath/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/wpinet/: BUILD.bazel  test.cpp
tests/cpp/wpiutil/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/xrpVendordep/: BUILD.bazel  main.cpp  test.cpp
tests/java/annotations/: BUILD.bazel  BasicTest.java  Main.java
tests/java/apriltag/: BUILD.bazel  BasicTest.java  Main.java
tests/java/cameraserver/: BUILD.bazel  BasicTest.java  Main.java
tests/java/cscore/: BUILD.bazel  BasicTest.java  Main.java
tests/java/epilogueprocessor/: BUILD.bazel  BasicTest.java  Main.java
tests/java/epilogueruntime/: BUILD.bazel  BasicTest.java  Main.java
tests/java/fieldImages/: BUILD.bazel  BasicTest.java  Main.java
tests/java/fieldimages/: BUILD.bazel  BasicTest.java  Main.java
tests/java/hal/: BUILD.bazel  BasicTest.java  Main.java
tests/java/ntcore/: BUILD.bazel  BasicTest.java  Main.java
tests/java/shuffleboard-api/: BUILD.bazel  Main.java
tests/java/shuffleboardapi/: BUILD.bazel  BasicTest.java  Main.java
tests/java/wpilibNewCommands/: BUILD.bazel  BasicTest.java
tests/java/wpilibOldCommands/: BUILD.bazel  BasicTest.java  Main.java
tests/java/wpilibj/: BUILD.bazel  BasicTest.java  Main.java
tests/java/wpilibnewcommands/: BUILD.bazel  BasicTest.java  Main.java
tests/java/wpimath/: BUILD.bazel  BasicTest.java  Main.java
tests/java/wpinet/: BUILD.bazel  BasicTest.java  Main.java
tests/java/wpiunits/: BUILD.bazel  BasicTest.java  Main.java
tests/java/wpiutil/: BUILD.bazel  BasicTest.java  Main.java
tests/robot-cpp/: BUILD  robot.cpp
tests/robot-cpp/commands/: BUILD  elevator_setpoint_command.cpp  joystick_drive_command.cpp  shooter_rpm_command.cpp  shooter_rpm_command.hpp
tests/robot-cpp/subsystems/: BUILD  drivetrain.cpp  drivetrain.hpp  elevator.cpp  shooter.cpp
tests/robot-java/src/main/java/frc/robot/: BUILD
tests/robot-java/src/main/java/frc/robot/subsystems/: BUILD  DriveTrain.java  Elevator.java  Shooter.java
(+5 files in other folders)
