module(
    name = "bzlmodrio-allwpilib",
    version = "2025.3.2-123-g22d12d2",
    compatibility_level = 2027,
)

bazel_dep(name = "platforms", version = "0.0.9")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_java", version = "7.6.5")
bazel_dep(name = "rules_shell", version = "0.4.0")
bazel_dep(name = "rules_jvm_external", version = "6.1")
bazel_dep(name = "rules_bzlmodrio_toolchains", version = "2025-1.bcr2")
bazel_dep(name = "bzlmodrio-opencv", version = "2025.4.10.0-3.bcr2")
bazel_dep(name = "bzlmodrio-ni", version = "2025.2.0.bcr1")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.fasterxml.jackson.core:jackson-annotations:2.15.2",
        "com.fasterxml.jackson.core:jackson-core:2.15.2",
        "com.fasterxml.jackson.core:jackson-databind:2.15.2",
        "org.ejml:ejml-simple:0.43.1",
        "us.hebi.quickbuf:quickbuf-runtime:1.3.2",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://frcmaven.wpi.edu/release",
    ],
)
use_repo(
    maven,
    "maven",
)

setup_bzlmodrio_allwpilib_cpp_dependencies = use_extension("//:maven_cpp_deps.bzl", "setup_bzlmodrio_allwpilib_cpp_dependencies")
use_repo(
    setup_bzlmodrio_allwpilib_cpp_dependencies,
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_headers",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_sources",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_headers",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_sources",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_headers",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_sources",
    "bazelrio_edu_wpi_first_datalog_datalog-cpp_headers",
    "bazelrio_edu_wpi_first_datalog_datalog-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_datalog_datalog-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_datalog_datalog-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_datalog_datalog-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_datalog_datalog-cpp_sources",
    "bazelrio_edu_wpi_first_hal_hal-cpp_headers",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_hal_hal-cpp_sources",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_headers",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_linuxx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_linuxx86-64debug",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_linuxx86-64static",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_sources",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_headers",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_linuxx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_linuxx86-64debug",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_linuxx86-64static",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_sources",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_headers",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_linuxx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_linuxx86-64debug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_linuxx86-64static",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_sources",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_headers",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_linuxx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_linuxx86-64debug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_linuxx86-64static",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_sources",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_headers",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_sources",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_headers",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_sources",
    "bazelrio_edu_wpi_first_tools_datalogtool_linuxx86-64",
    "bazelrio_edu_wpi_first_tools_glass_linuxx86-64",
    "bazelrio_edu_wpi_first_tools_outlineviewer_linuxx86-64",
    "bazelrio_edu_wpi_first_tools_sysid_linuxx86-64",
    "bazelrio_edu_wpi_first_tools_sysid_osxuniversal",
    "bazelrio_edu_wpi_first_tools_sysid_windowsarm64",
    "bazelrio_edu_wpi_first_tools_sysid_windowsx86-64",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_headers",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_sources",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_headers",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_sources",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_headers",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_sources",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_headers",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_sources",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_headers",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_sources",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_headers",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_sources",
)

setup_bzlmodrio_allwpilib_java_dependencies = use_extension("//:maven_java_deps.bzl", "setup_bzlmodrio_allwpilib_java_dependencies")
use_repo(
    setup_bzlmodrio_allwpilib_java_dependencies,
    "edu_wpi_first_apriltag_apriltag_java",
    "edu_wpi_first_cameraserver_cameraserver_java",
    "edu_wpi_first_cscore_cscore_java",
    "edu_wpi_first_fieldimages_fieldimages_java",
    "edu_wpi_first_hal_hal_java",
    "edu_wpi_first_ntcore_ntcore_java",
    "edu_wpi_first_wpilibj_wpilibj_java",
    "edu_wpi_first_wpilibnewcommands_wpilibnewcommands_java",
    "edu_wpi_first_wpimath_wpimath_java",
    "edu_wpi_first_wpinet_wpinet_java",
    "edu_wpi_first_wpiunits_wpiunits_java",
    "edu_wpi_first_wpiutil_wpiutil_java",
)
